--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         crossorigin="anonymous"></script>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html" title="Homepage">Denisse Ramirez</a>
+            <a class="navbar-brand" href="/" title="Homepage">Denisse Ramirez</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -26,13 +26,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="index.html" title="Portfolio Home">Home</a>
+                        <a class="nav-link" aria-current="page" href="/" title="Portfolio Home">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="about.html" title="Learn About My Coding Journey">About me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html#contact" title="Contact Me">Contact me</a>
+                        <a class="nav-link" href="about.html#contact" title="Contact Denisse Ramirez">Contact me</a>
                     </li>
                 </ul>
             </div>
