--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Projects coded by Denisse Ramirez and learned on SheCodes">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Denisse Ramirez</title>
+    <title>Front End Developer Denisse Ramirez</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <link rel="stylesheet" href="/src/styles.css" />
@@ -18,7 +18,7 @@
         crossorigin="anonymous"></script>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html" title="Homepage">Denisse Ramirez</a>
+            <a class="navbar-brand" href="/" title="Homepage">Denisse Ramirez</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -26,13 +26,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="index.html" title="Portfolio Home">Home</a>
+                        <a class="nav-link" aria-current="page" href="/" title="Portfolio Home">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="about.html" title="Learn About My Coding Journey">About me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html#contact" title="Contact Me">Contact me</a>
+                        <a class="nav-link" href="about.html#contact" title="Contact Denisse Ramirez">Contact me</a>
                     </li>
                 </ul>
             </div>
@@ -46,11 +46,11 @@
         <a href="about.html" class="about-link" title="Learn about my coding journey">About me</a>
     </div>
     <div class="container">
-        <div class="row mt-5">
-            <div class="col-6">
+        <div class="row mt-3">
+            <div class="col-sm-6">
                 <img src="images/yoga.png" class="img-fluid rounded" alt="Find out about local yoga classes" />
             </div>
-            <div class="col-6">
+            <div class="col-sm-6">
                 <h2 class="mt-2 mb-3">Yoga App</h2>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -64,7 +64,7 @@
             </div>
         </div>
         <div class="row mt-5">
-            <div class="col-6">
+            <div class="col-sm-6">
                 <h2 class="mt-2 mb-3">Weather App</h2>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -76,15 +76,15 @@
                     <a href="" class="primary-link" title="Launch the Weather App">Launch Weather App</a>
                 </div>
             </div>
-            <div class="col-6">
+            <div class="col-sm-6">
                 <img src="images/weather.png" class="img-fluid rounded" alt="Get the latest weather on this app" />
             </div>
         </div>
         <div class="row mt-5">
-            <div class="col-6">
+            <div class="col-sm-6">
                 <img src="images/yogurt.png" class="img-fluid rounded" alt="Learn about the benefits of Yogurt" />
             </div>
-            <div class="col-6">
+            <div class="col-sm-6">
                 <h2 class="mt-2 mb-3">Yogurt App</h2>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
